bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_Business_Address__c.field-meta.xml
<CustomField>
    <fullName>AFH_Business_Address__c</fullName>
    <formula>Contact.Account.ShippingStreet  &amp;&quot;, &quot;&amp;
Contact.Account.ShippingCity  &amp;&quot;, &quot;&amp;
Contact.Account.ShippingCountry  &amp;&quot;, &quot;&amp;
Contact.Account.ShippingPostalCode</formula>
    <label>Business Address</label>
    <type>Text</type>
</CustomField>