bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_CampaignTLCCheck__c.field-meta.xml
<CustomField>
    <fullName>AFH_CampaignTLCCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Stores whether the user accepted the campaign Terms &amp; Conditions</description>
    <label>Privacy Policy</label>
    <type>Checkbox</type>
</CustomField>