bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_Comments__c.field-meta.xml
<CustomField>
    <fullName>AFH_Comments__c</fullName>
    <label>Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>