bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_IsAFHCampMember__c.field-meta.xml
<CustomField>
    <fullName>AFH_IsAFHCampMember__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies that the Campaign Member was created through the AFH website registration form.</description>
    <label>IsAFHCampMember</label>
    <type>Checkbox</type>
</CustomField>