bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_IsMarkConsent__c.field-meta.xml
<CustomField>
    <fullName>AFH_IsMarkConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMarkConsent</label>
    <type>Checkbox</type>
</CustomField>