bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_ShowApprovalButton__c.field-meta.xml
<CustomField>
    <fullName>AFH_ShowApprovalButton__c</fullName>
    <description>To display Approval button</description>
    <formula>AND(
    ISPICKVAL(AFH_Approval_Status__c, &quot;Pending&quot;),

    OR(
        ISPICKVAL($User.Persona__c, &quot;AFH Representative&quot;),
        ISPICKVAL($User.Persona__c, &quot;AFH Approver&quot;)
    ),

    Campaign.AFH_CampaignKey__c = &quot;Doritos-Loaded&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowApprovalButton</label>
    <type>Checkbox</type>
</CustomField>