bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_ShowApprovalField__c.field-meta.xml
<CustomField>
    <fullName>AFH_ShowApprovalField__c</fullName>
    <formula>Campaign.AFH_CampaignKey__c = &quot;Doritos-Loaded&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ShowApprovalField</label>
    <type>Checkbox</type>
</CustomField>