bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_Signature_DocID__c.field-meta.xml
<CustomField>
    <fullName>AFH_Signature_DocID__c</fullName>
    <label>Signature DocID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>