bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_SignUpURL__c.field-meta.xml
<CustomField>
    <fullName>AFH_SignUpURL__c</fullName>
    <formula>$Label.AFH_Site_URL &amp; &apos;/signup?contactId=&apos; &amp; ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SignUpURL</label>
    <type>Text</type>
</CustomField>