bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_TradeMarkAgreementConsent__c.field-meta.xml
<CustomField>
    <fullName>AFH_TradeMarkAgreementConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field store the consent for Trade Mark form.</description>
    <label>TradeMarkAgreementConsent</label>
    <type>Checkbox</type>
</CustomField>