bundled_metadata/force-app/main/default/objects/CampaignMember/fields/AFH_TradeMarkFormURL__c.field-meta.xml
<CustomField>
    <fullName>AFH_TradeMarkFormURL__c</fullName>
    <formula>$Label.AFH_SiteURL 
&amp; &apos;/apex/AFH_TrademarkLicense?id=&apos; 
&amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TradeMarkFormURL</label>
    <type>Text</type>
</CustomField>